--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
