Node version updated

--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "hackfest",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
