--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {},
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": "14.20.1"
+  }
 }
