--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {},
   "author": "",
   "license": "ISC",
-  "description": "",
   "engines": {
     "node": "14.20.1"
-  }
+  },
+  "description": ""
 }
